--- a/WebInventory/src/app/new-product/new-product.component.html
+++ b/WebInventory/src/app/new-product/new-product.component.html
@@ -32,7 +32,7 @@
         <p></p>
     </div>
     <div class="form-actions">
-        <button type="submit" [disabled]="f.invalid" class="btn btn-success">Submit Product</button>
+        <button type="submit" class="btn btn-success">Submit Product</button>
     </div>
     </form>
 </div>
