--- a/WebInventory/src/styles.css
+++ b/WebInventory/src/styles.css
@@ -344,7 +344,7 @@
  }
  
  button {
-   border-radius: 0;
+   border-radius: 0px;
  }
  
  button:focus:not(:focus-visible) {
@@ -4343,7 +4343,7 @@
    line-height: 1;
    background-color: transparent;
    border: 1px solid transparent;
-   border-radius: 0.25rem;
+   border-radius: 5rem;
    transition: box-shadow 0.15s ease-in-out;
  }
  
