--- a/WebInventory/src/app/app.component.css
+++ b/WebInventory/src/app/app.component.css
@@ -1,11 +1,13 @@
 h1{
     text-align: center;
+    background-color: #e83e8c;
 }
 .container {
     width: 50vw;
     clear: both;
+    border-radius: 40px;
 }
-.container-fluid{
-    border-radius: 4px;
+.navbar{
+    border-radius: 40px;
 }
 
