--- a/WebInventory/src/app/app.component.html
+++ b/WebInventory/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<h1 class="container">{{title}}</h1>
 <p></p>
 <div class="container">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
