--- a/WebInventory/src/app/new-product/new-product.component.css
+++ b/WebInventory/src/app/new-product/new-product.component.css
@@ -16,5 +16,11 @@ input, select{
     color: red;
     font-family:cursive
 }
+form .form-actions{
+    text-align: center;
+}
+.movement{
+    text-align: center;
+}
 
 
