--- a/WebInventory/src/app/app.component.html
+++ b/WebInventory/src/app/app.component.html
@@ -4,12 +4,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand">Navigation</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar1" 
-            aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation" 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar1"
+            aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation"
             wfd-invisible="true">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        
+
         <div class="collapse navbar-collapse" id="navbar1">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -21,9 +21,12 @@
                     <a class="nav-link" routerLink="/newproduct">Add Product
                     </a>
                 </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/threshold">Threshold Level</a>
+              </li>
             </ul>
         </div>
-    
+
 
     </div>
 </nav>
