Add Bootstrap to Threshold table.

--- a/WebInventory/src/app/app.component.html
+++ b/WebInventory/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1 class="container">{{title}}</h1>
 <p></p>
 <div class="container">
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-">
     <div class="container-fluid">
-        <a class="navbar-brand">Navigation</a>
+        <a class="navbar-brand ">Navigation</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar1"
             aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation"
             wfd-invisible="true">
