--- a/WebInventory/src/app/check-threshold/check-threshold.component.html
+++ b/WebInventory/src/app/check-threshold/check-threshold.component.html
@@ -1,19 +1,22 @@
-<div>
-  <table>
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Demand</th>
-      </tr>
+
+<div class="m-3 p-2">
+  <table class="table table-striped table-responsive-sm text-center table-bordered">
+    <thead class="table-dark text-md-center">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Title</th>
+      <th scope="col">Demand</th>
+    </tr>
     </thead>
-    <tbody>
-      <ng-container>
-        <tr *ngFor="let threshold of thresholds">
-          <td>{{threshold.title}}</td>
-          <td>{{threshold.demand}}</td>
-        </tr>
-      </ng-container>
+    <tbody >
+    <tr *ngFor="let threshold of thresholds; let i = index" >
+      <th scope="row">{{i}}</th>
+      <td>{{threshold.title}}</td>
+      <td>{{threshold.demand}}</td>
+    </tr>
     </tbody>
   </table>
 </div>
+
+
 
