Consistent table size

--- a/WebInventory/src/app/check-threshold/check-threshold.component.css
+++ b/WebInventory/src/app/check-threshold/check-threshold.component.css
@@ -1,3 +1,16 @@
 .table-threshold h3{
   font-size: x-large;
 }
+
+table{
+  text-align: center;
+  align-content: center;
+  max-width: 100em;
+}
+
+.box{
+  margin: auto ;
+  padding: 2em;
+  max-width: 70em;
+
+}
