--- a/WebInventory/src/app/check-threshold/check-threshold.component.html
+++ b/WebInventory/src/app/check-threshold/check-threshold.component.html
@@ -1,23 +1,25 @@
-
-<div class="container-fluid m-3 p-3 table-threshold">
-  <h3 class="card-title m-2 p-2 text-center">Threshold Level</h3>
-  <table class="table table-striped table-responsive-sm text-center table-bordered align-items-center">
-    <thead class="table-dark text-center ">
-    <tr class="">
-      <th scope="col">Item Line</th>
-      <th scope="col">Title</th>
-      <th scope="col">Demand</th>
-    </tr>
-    </thead>
-    <tbody >
-    <tr *ngFor="let threshold of thresholds; let i = index;">
-      <th>{{i}}</th>
-      <td>{{threshold.title}}</td>
-      <td>{{threshold.demand}}</td>
-    </tr>
-    </tbody>
-  </table>
+<div class="box">
+  <div class="container-fluid m-3 p-3 table-threshold">
+    <h3 class="card-title m-2 p-2 text-center">Threshold Level</h3>
+    <table class="table table-striped table-responsive-sm text-center table-bordered align-items-center">
+      <thead class="table-dark text-center ">
+      <tr class="">
+        <th scope="col">Item Line</th>
+        <th scope="col">Title</th>
+        <th scope="col">Demand</th>
+      </tr>
+      </thead>
+      <tbody >
+      <tr *ngFor="let threshold of thresholds; let i = index;">
+        <th>{{i}}</th>
+        <td>{{threshold.title}}</td>
+        <td>{{threshold.demand}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
 
 
 
