3rd angular commit
Testing method for drop down menu and access

--- a/WebInventory/src/app/app.component.html
+++ b/WebInventory/src/app/app.component.html
@@ -1,4 +1,25 @@
 <h1>{{title}}</h1>
+
+<div class="container">
+    <h1>Angular Select Dropdown Example - ItSolutionStuff.com</h1>
+        
+    <form [formGroup]="form" (ngSubmit)="submit()">
+           
+        <div class="form-group">
+            <label for="website">Website:</label>
+            <select formControlName="website" class="form-control">
+                <option disabled>Select Website</option>
+                <option>Choose Website</option>
+                <option *ngFor="let web of websiteList">{{web}}</option>
+            </select>
+            <div *ngIf="f.website.touched && f.website.invalid" class="alert alert-danger">
+                <!--<div *ngIf="f.website.errors.required">Name is required.</div>-->
+            </div>
+        </div>
+       
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+    </form>
+</div>
 <!--need to add the router links later-->
 <app-category></app-category>
 <router-outlet></router-outlet>
