--- a/WebInventory/src/app/category/category.component.html
+++ b/WebInventory/src/app/category/category.component.html
@@ -6,9 +6,9 @@ specifc or requested category-->
 <div class="input-group">
     <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
       <option selected>Choose...</option>
-      <option value="1">Electronics</option>
-      <option value="2">Appliances</option>
-      <option value="3">Home Decor</option>
+      <option value="Electronics">Electronics</option>
+      <option value="Appliances">Appliances</option>
+      <option value="Home Decor">Home Decor</option>
     </select>
     <button class="btn btn-outline-secondary" type="button">Search</button>
   </div>
@@ -22,7 +22,7 @@ specifc or requested category-->
         <th>Minimum Limit</th><!--min limit available?-->
     </tr>
 
-    <tr>
+    <tr><!--will need to change this to reflect other array-->
         <td><div *ngFor="let d of data">{{d.id}}</div></td>
         <td><div *ngFor="let d of data">{{d.title}}</div></td>
         <td><div *ngFor="let d of data">{{d.category}}</div></td>
