--- a/WebInventory/src/app/check-threshold/check-threshold.component.html
+++ b/WebInventory/src/app/check-threshold/check-threshold.component.html
@@ -18,6 +18,9 @@
       </tbody>
     </table>
   </div>
+  <div class="movement">
+    <button type="button" class="btn btn-secondary">Go Back</button>
+  </div>
 </div>
 
 
