--- a/WebInventory/src/app/app.component.css
+++ b/WebInventory/src/app/app.component.css
@@ -1,6 +1,7 @@
 h1{
     text-align: center;
-    background-color: #e83e8c;
+    background-color: #2aa198;
+    color: white;
 }
 .container {
     width: 50vw;
