--- a/WebInventory/src/app/check-threshold/check-threshold.component.html
+++ b/WebInventory/src/app/check-threshold/check-threshold.component.html
@@ -19,7 +19,7 @@
     </table>
   </div>
   <div class="movement">
-    <button type="button" class="btn btn-secondary">Go Back</button>
+    <button type="button" class="btn btn-secondary" (click)="goBack()">Go Back</button>
   </div>
 </div>
 
