--- a/WebInventory/src/app/new-product/new-product.component.html
+++ b/WebInventory/src/app/new-product/new-product.component.html
@@ -36,6 +36,6 @@
     </div>
     </form>
     <div class="movement">
-        <button type="button" class="btn btn-secondary">Go Back</button>
+        <button type="button" class="btn btn-secondary" (click)="goBack()">Go Back</button>
     </div>
 </div>
