--- a/WebInventory/src/app/update-stock/update-stock.component.html
+++ b/WebInventory/src/app/update-stock/update-stock.component.html
@@ -1,41 +1,53 @@
-<h3> Please enter information below for new ticket</h3>
-<p></p>
-<div class="container" ng-app="app" ng-controller="ctrl">
-    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-        <div class="form-group">
-            <div class="form-floating">
-                <input id="title" class="form-control" type="text" name="title" 
-                placeholder="Name of Product" required ngModel>
-                <label for="title">Product Name</label>
-                </div>
-            </div>
-        <p></p>
-        <div>
-                <select name="category" class= "form-select" id="selections" required ngModel>
-                    <option selected="selected" value="" >Select a category</option>
-                    <option value="Electronics">Electronics</option>
-                    <option value="Furniture">Furniture</option>
-                    <option value="Home Decor">Home Decor</option>
-                </select>
-        </div>
-        <p></p>
-        <div class="form-group">
-        <div class="form-floating">
-            <input class="form-control" id= "manufacturer" type="text" name="manufacturer" placeholder="Manufacturer" required ngModel>
-            <label for="manufacturer">Manufacturer</label>
-        </div>
-        <p></p>
-        <div class="form-floating">
-            <input class="form-control" id="minlimit" type="number" name="minlimit" placeholder="Minimum" required ngModel>
-            <label for="minlimit">Minimum Limit</label>
-        </div>
-        <p></p>
+<div class="container">
+    <div class="row">
+        <h1 style="text-align: center;">Update Product Stock</h1>
     </div>
-    <div class="form-actions">
-        <button type="submit" [disabled]="f.invalid" class="btn btn-success">Submit Product</button>
+
+    <div class="row">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Product ID</th>
+                <th>Transaction Date</th>
+                <th>Vendor</th>
+                <th>Batch Code</th>
+                <th>Invoice Number</th>
+                <th>Quantity</th>
+                <th>Transaction Type</th>
+            </tr>
+            <tr>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.id}}</div>
+                </td>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.productId.title}}</div>
+                </td>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.transactionDate| date }}</div>
+                </td>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.vendor}}</div>
+                </td>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.batchCode}}</div>
+                </td>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.invoiceNumber}}</div>
+                </td>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.quantity}}</div>
+                </td>
+                <td>
+                    <div *ngFor="let invoice of invoices ">{{invoice.transactionType}}</div>
+                </td>
+                
+            </tr>
+
+
+        </table>
     </div>
-    </form>
-    <div class="movement">
-        <button type="button" class="btn btn-secondary" (click)="goBack()">Go Back</button>
+    <div>
+        <button (click)="updateStock()" class="updatestock" style="justify-content: center;">Update Stock</button>
     </div>
+
 </div>
