--- a/WebInventory/src/app/app.component.html
+++ b/WebInventory/src/app/app.component.html
@@ -24,6 +24,12 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/threshold">Threshold Level</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/newstock">Create Stock</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/updatestock">Update Stock</a>
+              </li>
             </ul>
         </div>
 
