--- a/WebInventory/src/app/app.component.css
+++ b/WebInventory/src/app/app.component.css
@@ -1,3 +1,13 @@
-*{
-    background-color: #219EBC;
+h1{
+    text-align: center;
+    background-color: #2aa198;
+    color: white;
+}
+.container {
+    width: 50vw;
+    clear: both;
+    border-radius: 40px;
+}
+.navbar{
+    border-radius: 40px;
 }
