--- a/WebInventory/src/app/new-stock/new-stock.component.html
+++ b/WebInventory/src/app/new-stock/new-stock.component.html
@@ -1,16 +1,17 @@
+
 <div class="container">
     <div class="row" >
-        <h1 style="text-align: center;">Create New Invoice</h1>
+        <h1 style="text-align: center;">Create Stock Transaction</h1>
     </div>
 
     <div class="row">
-        <form class="invoiceForm" (ngSubmit)="onSubmit(invoiceForm)" #invoiceForm="ngForm">
-            <p>Product Id: <input name="productId" type="number" placeholder="0" ngModel></p>
+        <form class="stockForm" (ngSubmit)="onSubmit(stockForm)" #stockForm="ngForm">
+            <p>Product Id: <input name="productid" type="number" placeholder="0" ngModel></p>
             <p>Vendor: <input name="vendor" type="vendor" placeholder="Vendor" ngModel></p>
-            <p>Batch Code: <input name="batchCode" type="text" placeholder="Batch Code" ngModel></p>
-            <p>Invoice Number: <input name="invoiceNum" type="text" placeholder="Invoice Number" ngModel></p>
-            <p>Quantity: <input name="Quantity" type="number" placeholder="0" ngModel></p>
-            <p>Transaction Type: <select name="transactionType" ngModel><option >IN</option><option >OUT</option></select></p>
+            <p>Batch Code: <input name="batchcode" type="text" placeholder="Batch Code" ngModel></p>
+            <p>Invoice Number: <input name="invoicenumber" type="text" placeholder="Invoice Number" ngModel></p>
+            <p>Quantity: <input name="quantity" type="number" placeholder="0" ngModel></p>
+            <p>Transaction Type: <select name="transactiontype" ngModel><option >IN</option><option >OUT</option></select></p>
 
             <button class="formButton" type="submit">Submit</button>
         </form>
