--- a/WebInventory/src/app/app.component.html
+++ b/WebInventory/src/app/app.component.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" routerLink="/threshold">Threshold Level</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/category">View Categories</a>
+                <a class="nav-link" routerLink="/categories">View Categories</a>
               </li>
             </ul>
         </div>
