--- a/WebInventory/src/app/category/category.component.html
+++ b/WebInventory/src/app/category/category.component.html
@@ -1,9 +1,39 @@
-<h2>Categories</h2>
+<!--place category selection here-->
+<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+  <button type="button" class="btn btn-success">Search</button>
+  <div class="btn-group " role="group">
+    <button id="btnGroupDrop2" type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+    <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
+      <a class="dropdown-item" href="http://localhost:8080/product/category/Electronics">Electronics</a>
+      <a class="dropdown-item" href="http://localhost:8080/product/category/Furniture">Furniture</a>
+      <a class="dropdown-item" href="http://localhost:8080/product/category/Home Decor">Home Decor</a>
+    </div>
+  </div>
+</div>
 
-<select [(ngModel)] = "selectedData" (change) = "selected()">
-    <option *ngFor = "let d of data" [ngValue] = "d">
-        {{d.category}}
-    </option>
-</select>
 
-{{selectedData | json}}
+<div class="box">
+    <div class="container-fluid m-3 p-3 table-threshold">
+      <h3 class="card-title m-2 p-2 text-center">Categories</h3>
+      <table class="table table-striped table-responsive-sm text-center table-bordered align-items-center">
+        <thead class="table-primary text-center ">
+        <tr class="">
+          <th scope="col">Product Id </th>
+          <th scope="col">Product Title</th>
+          <th scope="col">Product Category</th>
+          <th scope="col">Product Manufacturer</th>
+          <th scope="col">Product Minimum Limit</th>
+        </tr>
+        </thead>
+        <tbody class = "table-success text-center">
+        <tr *ngFor="let d of data">
+          <th>{{d.id}}</th>
+          <td>{{d.title}}</td>
+          <td>{{d.category}}</td>
+          <td>{{d.manufacturer}}</td>
+          <td>{{d.minlimit}}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
