--- a/WebInventory/src/app/category/category.component.html
+++ b/WebInventory/src/app/category/category.component.html
@@ -4,9 +4,9 @@
   <div class="btn-group " role="group">
     <button id="btnGroupDrop2" type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
     <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
-      <a class="dropdown-item" href="http://localhost:8080/product/category/Electronics">Electronics</a>
-      <a class="dropdown-item" href="http://localhost:8080/product/category/Furniture">Furniture</a>
-      <a class="dropdown-item" href="http://localhost:8080/product/category/Home Decor">Home Decor</a>
+      <a class="dropdown-item" href="category">Electronics</a>
+      <a class="dropdown-item" href="category">Furniture</a>
+      <a class="dropdown-item" href="category">Home Decor</a>
     </div>
   </div>
 </div>
